Styling and text updates

--- a/livingdata.html
+++ b/livingdata.html
@@ -2,98 +2,93 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
 
-	<title>Thorsten Bell - Living Data</title>
-	<meta name="author" content="Thorsten Bell">
-	<meta name="description" content="Living Data is a branding design project I did as part of my final year of university">
+    <title>Thorsten Bell - Living Data</title>
+    <meta name="author" content="Thorsten Bell">
+    <meta name="description"
+          content="Living Data is a branding design project I did as part of my final year of university">
 
-	<link rel="shortcut icon" type="image/png" href="favicon.png">
-	<link rel="shortcut icon" sizes="192x192" href="favicon.png">
-	<link rel="apple-touch-icon" href="favicon.png">
-	<link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" sizes="192x192" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="stylesheet" href="style.css?20230102">
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-	<script src="https://kit.fontawesome.com/01e3cbe6fb.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/01e3cbe6fb.js" crossorigin="anonymous"></script>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
-	<!-- Nav bar -->
-	<div class="navbar">
-		<div class="container">
-			<div class="nav">
-				<a href="index.html" class="logo"><img src="logo.svg" alt="home"></a>
-				<a href="mailto:thorst@gmail.com" class="button1">thorst@gmail.com</a>
-			</div>
-		</div>
-	</div>
+<!-- Nav bar -->
+<div class="navbar">
+    <div class="container">
+        <div class="nav">
+            <a href="index.html" class="logo"><img src="logo.svg" alt="home"></a>
+            <a href="mailto:thorst@gmail.com" class="button1">thorst@gmail.com</a>
+        </div>
+    </div>
+</div>
 
-	<!-- Banner -->
-	<div class="banner" style="background-image: url('images/homeBanner.jpg')">
-		<div class="page-title">
-			<h1>Living Data</h1>
-			<a href="index.html" class="button2">Back to home</a>
-		</div>
-	</div>
+<!-- Banner -->
+<div class="banner" style="background-image: url('images/homeBanner.jpg')">
+    <div class="page-title">
+        <h1>Living Data</h1>
+        <a href="index.html" class="button2">Back to home</a>
+    </div>
+</div>
 
-	<!-- Main Content -->
-	<div class="container">
+<!-- Main Content -->
+<div class="container">
+    <section>
+        <h2 class="mob-center">Living Data</h2>
+        <p>Living data is an exhibition designed to educate people on the positives of Big Data and how it is
+            changing society. Big data has changed the world. We can now track the spread of diseases, treat
+            illnesses more effectively, improve performance of ourselves, products and services.</p>
+        <p>Our new exhibition explores how society is changing in response to the developments of big data
+            technology. How is human health and performance improving with big data? How is personal transport and
+            goods transport becoming more efficient and effective? How are businessses increasing returns and
+            reducing wastage? These are all questions that are answered in this exhibition.</p>
+    </section>
+    <section class="grid">
+        <img src="images/data/data1.jpg" class="proj-img" alt="">
+        <img src="images/data/data2.jpg" class="proj-img" alt="">
+        <img src="images/data/data3.jpg" class="proj-img" alt="">
+        <img src="images/data/data4.jpg" class="proj-img" alt="">
+        <img src="images/data/data5.jpg" class="proj-img" alt="">
+        <img src="images/data/data6.jpg" class="proj-img" alt="">
 
-		<div class="row">
-			<div class="about">
-				<div class="box1">
-					<h2 class="mob-center">Living Data</h2>
-					<p>Living data is an exhibition designed to educate people on the positives of Big Data and how it is changing society. Big data has changed the world. We can now track the spread of diseases, treat illnesses more effectively, improve performance of ourselves, products and services.</p>
-					<p>Our new exhibition explores how society is changing in response to the developments of big data technology. How is human health and performance improving with big data? How is personal transport and goods transport becoming more efficient and effective? How are businessses increasing returns and reducing wastage? These are all questions that are answered in this exhibition.</p>
-				</div>
-				<div class="box1">
-					<img src="images/data/data1.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/data/data2.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/data/data3.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/data/data4.jpg" class="proj-img">
-				</div>
-				<div class="box1">
-					<img src="images/data/data5.jpg" class="proj-img">
-				</div>
-				<div class="box1">
-					<img src="images/data/data6.jpg" class="proj-img">
-				</div>
-			</div>
-		</div>
+    </section>
 
-		<div class="buttons">
-			<a href="index.html" class="button1">Back to home</a>
-		</div>
 
-	</div>
+    <div class="buttons">
+        <a href="index.html" class="button1">Back to home</a>
+    </div>
 
-	<!-- Footer -->
-	<footer>
-		<div class="container">
-			<div class="footer">
-				<div class="footer-col">
-					<h3>Get in touch!</h3>
-					<a href="mailto:thorst@gmail.com" class="button2">thorst@gmail.com</a>
-				</div>
-				<div class="footer-col">
-					<h3>Social media</h3>
-					<a href="https://www.linkedin.com/in/thorstenbell/" target="_blank" rel="noreferrer" class="button2">LinkedIn</a>
-				</div>
-			</div>
-		</div>
-		<p id="copyright">&copy; Thorsten Bell <script>document.write(new Date().getFullYear())</script></p>
-	</footer>
+</div>
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="footer">
+            <div>
+                <h3>Get in touch!</h3>
+                <a href="mailto:thorst@gmail.com" class="button2">thorst@gmail.com</a>
+            </div>
+            <div>
+                <h3>Social media</h3>
+                <a href="https://www.linkedin.com/in/thorstenbell/" target="_blank" rel="noreferrer" class="button2">LinkedIn</a>
+            </div>
+        </div>
+    </div>
+    <p id="copyright">&copy; Thorsten Bell
+        <script>document.write(new Date().getFullYear())</script>
+    </p>
+</footer>
 
 </body>
 </html>
