--- a/heco.html
+++ b/heco.html
@@ -2,91 +2,86 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
 
-	<title>Thorsten Bell - Heco Analytics</title>
-	<meta name="author" content="Thorsten Bell">
-	<meta name="description" content="Thorsten designed the brand identity and website for Heco Analytics">
+    <title>Thorsten Bell - Heco Analytics</title>
+    <meta name="author" content="Thorsten Bell">
+    <meta name="description" content="Thorsten designed the brand identity and website for Heco Analytics">
 
-	<link rel="shortcut icon" type="image/png" href="favicon.png">
-	<link rel="shortcut icon" sizes="192x192" href="favicon.png">
-	<link rel="apple-touch-icon" href="favicon.png">
-	<link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" sizes="192x192" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="stylesheet" href="style.css?20230102">
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-	<script src="https://kit.fontawesome.com/01e3cbe6fb.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/01e3cbe6fb.js" crossorigin="anonymous"></script>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
-	<!-- Nav bar -->
-	<div class="navbar">
-		<div class="container">
-			<div class="nav">
-				<a href="index.html" class="logo"><img src="logo.svg" alt="home"></a>
-				<a href="mailto:thorst@gmail.com" class="button1">thorst@gmail.com</a>
-			</div>
-		</div>
-	</div>
+<!-- Nav bar -->
+<div class="navbar">
+    <div class="container">
+        <div class="nav">
+            <a href="index.html" class="logo"><img src="logo.svg" alt="home"></a>
+            <a href="mailto:thorst@gmail.com" class="button1">thorst@gmail.com</a>
+        </div>
+    </div>
+</div>
 
-	<!-- Banner -->
-	<div class="banner" style="background-image: url('images/homeBanner.jpg')">
-		<div class="page-title">
-			<h1>Heco Analytics</h1>
-			<a href="index.html" class="button2">Back to home</a>
-		</div>
-	</div>
+<!-- Banner -->
+<div class="banner" style="background-image: url('images/homeBanner.jpg')">
+    <div class="page-title">
+        <h1>Heco Analytics</h1>
+        <a href="index.html" class="button2">Back to home</a>
+    </div>
+</div>
 
-	<!-- Main Content -->
-	<div class="container">
+<!-- Main Content -->
+<div class="container">
+    <section>
+        <h2 class="mob-center">Heco Analytics</h2>
+        <p>Heco Analytics is a health analytics company. I produced a logo, icon set and website for them. The logo
+            visualised a network of interacting data. The icons visualised different data sets and were used on the
+            site and in the software. The website made use of negative space and the icons to break up the text
+            heavy content to give the site a clean and clinical appearance as the client is in the medical
+            sector.</p>
+    </section>
+    <section class="grid">
+        <img src="images/heco/heco1psd.jpg" class="proj-img" alt="">
+        <img src="images/heco/heco2psd.jpg" class="proj-img" alt="">
+        <img src="images/heco/heco3psd.jpg" class="proj-img" alt="">
+        <img src="images/heco/heco4psd.jpg" class="proj-img" alt="">
+    </section>
 
-		<div class="row">
-			<div class="about">
-				<div class="box1">
-					<h2 class="mob-center">Heco Analytics</h2>
-					<p>Heco Analytics is a health analytics company. I produced a logo, icon set and website for them. The logo visualised a network of interacting data. The icons visualised different data sets and were used on the site and in the software. The website made use of negative space and the icons to break up the text heavy content to give the site a clean and clinical appearance as the client is in the medical sector.</p>
-				</div>
-				<div class="box1">
-					<img src="images/heco/heco1psd.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/heco/heco2psd.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/heco/heco3psd.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/heco/heco4psd.jpg" class="proj-img">
-				</div>
-			</div>
-		</div>
+    <div class="buttons">
+        <a href="index.html" class="button1">Back to home</a>
+    </div>
 
-		<div class="buttons">
-			<a href="index.html" class="button1">Back to home</a>
-		</div>
+</div>
 
-	</div>
-
-	<!-- Footer -->
-	<footer>
-		<div class="container">
-			<div class="footer">
-				<div class="footer-col">
-					<h3>Get in touch!</h3>
-					<a href="mailto:thorst@gmail.com" class="button2">thorst@gmail.com</a>
-				</div>
-				<div class="footer-col">
-					<h3>Social media</h3>
-					<a href="https://www.linkedin.com/in/thorstenbell/" target="_blank" rel="noreferrer" class="button2">LinkedIn</a>
-				</div>
-			</div>
-		</div>
-		<p id="copyright">&copy; Thorsten Bell <script>document.write(new Date().getFullYear())</script></p>
-	</footer>
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="footer">
+            <div>
+                <h3>Get in touch!</h3>
+                <a href="mailto:thorst@gmail.com" class="button2">thorst@gmail.com</a>
+            </div>
+            <div>
+                <h3>Social media</h3>
+                <a href="https://www.linkedin.com/in/thorstenbell/" target="_blank" rel="noreferrer" class="button2">LinkedIn</a>
+            </div>
+        </div>
+    </div>
+    <p id="copyright">&copy; Thorsten Bell
+        <script>document.write(new Date().getFullYear())</script>
+    </p>
+</footer>
 
 </body>
 </html>
