--- a/index.html
+++ b/index.html
@@ -2,140 +2,151 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
 
-	<title>Thorsten Bell - Portfolio</title>
-	<meta name="author" content="Thorsten Bell">
-	<meta name="description" content="W3BL is Thorsten Bell's Portfolio. Thorsten Bell is a graphic designer and web developer based in Enschede.">
+    <title>Thorsten Bell - Portfolio</title>
+    <meta name="author" content="Thorsten Bell">
+    <meta name="description"
+          content="W3BL is Thorsten Bell's Portfolio. Thorsten Bell is a developer based in the Netherlands and UK">
 
-	<link rel="shortcut icon" type="image/png" href="favicon.png">
-	<link rel="shortcut icon" sizes="192x192" href="favicon.png">
-	<link rel="apple-touch-icon" href="favicon.png">
-	<link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" sizes="192x192" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="stylesheet" href="style.css?20230102">
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-	<script src="https://kit.fontawesome.com/01e3cbe6fb.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/01e3cbe6fb.js" crossorigin="anonymous"></script>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
-	<!-- Nav bar -->
-	<div class="navbar">
-		<div class="container">
-			<div class="nav">
-				<a href="index.html" class="logo"><img src="logo.svg" alt="home"></a>
-				<a href="mailto:thorst@gmail.com" class="button1">thorst@gmail.com</a>
-			</div>
-		</div>
-	</div>
+<!-- Nav bar -->
+<div class="navbar">
+    <div class="container">
+        <div class="nav">
+            <a href="index.html" class="logo"><img src="logo.svg" alt="home"></a>
+            <a href="mailto:thorst@gmail.com" class="button1">thorst@gmail.com</a>
+        </div>
+    </div>
+</div>
 
-	<!-- Banner -->
-	<div class="banner" style="background-image: url('images/homeBanner.jpg')">
-		<div class="page-title">
-			<h1>Thorsten Bell</h1>
-			<p>Graphic Design & Web Development</p>
-		</div>
-	</div>
+<!-- Banner -->
+<div class="banner" style="background-image: url('images/homeBanner.jpg')">
+    <div class="page-title">
+        <h1>Thorsten Bell</h1>
+        <p>Graphic Design & Web Development</p>
+    </div>
+</div>
 
-	<!-- Main Content -->
-	<div class="container">
+<!-- Main Content -->
+<div class="container">
 
-		<!-- Projects -->
-		<div class="row">
-			<h2 class="center">My Work</h2>
-			<div class="projects">
-				<a href="walas.html" class="project">
-					<div class="project-bg" style="background-image: url('images/walas/walas3.jpg')"></div>
-					<div class="project-label">
-						<h3>World of Wal<u>a</u>s</h3>
-						<h4>Full time</h4>
-					</div>
-				</a>
+    <!-- Projects -->
+    <section>
+        <h2 class="center">My Work</h2>
+        <div class="projects">
+            <a href="walas.html" class="project">
+                <div class="project-bg" style="background-image: url('images/walas/walas3.jpg')"></div>
+                <div class="project-label">
+                    <h3>World of Wal<u>a</u>s</h3>
+                    <h4>Full time</h4>
+                </div>
+            </a>
 
-				<a href="rds.html" class="project">
-					<div class="project-bg" style="background-image: url('images/rds/rds5.jpg')"></div>
-					<div class="project-label">
-						<h3>RDS Fitness</h3>
-						<h4>Website | Branding</h4>
-					</div>
-				</a>
+            <a href="rds.html" class="project">
+                <div class="project-bg" style="background-image: url('images/rds/rds5.jpg')"></div>
+                <div class="project-label">
+                    <h3>RDS Fitness</h3>
+                    <h4>Website | Branding</h4>
+                </div>
+            </a>
 
-				<a href="heco.html" class="project">
-					<div class="project-bg" style="background-image: url('images/heco/heco1psd.jpg')"></div>
-					<div class="project-label">
-						<h3>Heco Analytics</h3>
-						<h4>Website | Branding</h4>
-					</div>
-				</a>
+            <a href="heco.html" class="project">
+                <div class="project-bg" style="background-image: url('images/heco/heco1psd.jpg')"></div>
+                <div class="project-label">
+                    <h3>Heco Analytics</h3>
+                    <h4>Website | Branding</h4>
+                </div>
+            </a>
 
-				<a href="beep.html" class="project">
-					<div class="project-bg" style="background-image: url('images/beep/beep7.jpg')"></div>
-					<div class="project-label">
-						<h3>BEEP.</h3>
-						<h4>Branding</h4>
-					</div>
-				</a>
+            <a href="beep.html" class="project">
+                <div class="project-bg" style="background-image: url('images/beep/beep7.jpg')"></div>
+                <div class="project-label">
+                    <h3>BEEP.</h3>
+                    <h4>Branding</h4>
+                </div>
+            </a>
 
-				<a href="livingdata.html" class="project">
-					<div class="project-bg" style="background-image: url('images/data/data4.jpg')"></div>
-					<div class="project-label">
-						<h3>Living Data</h3>
-						<h4>Branding</h4>
-					</div>
-				</a>
+            <a href="livingdata.html" class="project">
+                <div class="project-bg" style="background-image: url('images/data/data4.jpg')"></div>
+                <div class="project-label">
+                    <h3>Living Data</h3>
+                    <h4>Branding</h4>
+                </div>
+            </a>
 
-				<a href="meroe.html" class="project">
-					<div class="project-bg" style="background-image: url('images/meroe/meroe5.jpg')"></div>
-					<div class="project-label">
-						<h3>Meroë</h3>
-						<h4>Branding</h4>
-					</div>
-				</a>
+            <a href="meroe.html" class="project">
+                <div class="project-bg" style="background-image: url('images/meroe/meroe5.jpg')"></div>
+                <div class="project-label">
+                    <h3>Meroë</h3>
+                    <h4>Branding</h4>
+                </div>
+            </a>
 
-			</div>
-		</div>
+        </div>
+    </section>
 
-		<!-- About Me -->
-		<div class="row">
-			<div class="about">
-				<div class="box1">
-					<h2 class="mob-center">About Me</h2>
-					<p>I am a user focussed Graphic Designer and Web developer working on websites, brand guidelines and print materials for multiple brands. I currently lead the local branding and communication team for World of Walas, which is made up of content writers and graphic design interns. I actively engage with brands to enhance communication and promote their products and services to stakeholder groups. I enjoy working with people, especially learning from experts.</p>
-				</div>
-				<div class="box1 mob-center">
-					<h2>Software Skills</h2>
-					<h3><i class="fas fa-code"></i> Web development</h3>
-					<p>HTML, CSS, JavaScript, PHP, SQL</p>
-					<h3><i class="fas fa-palette"></i> Graphic Design</h3>
-					<p>Adobe CC: InDesign, Illustrator, Photoshop, XD</p>
-					<h3><i class="fas fa-project-diagram"></i></i> Data Analytics</h3>
-					<p>Python, SQL</p>
+    <!-- About Me -->
+    <section class="grid">
+        <div>
+            <h2 class="mob-center">About Me</h2>
+            <p>As a frontend developer, I specialise in creating intuitive and engaging user experiences for web and
+                mobile applications. With a strong background in HTML, CSS, and JavaScript, I am adept at developing
+                responsive, cross-browser compatible frontend interfaces. I also have experience with Python, R,
+                PHP, and SQL. I currently work as a developer and UX Designer in a software development team that
+                produces SaaS products for marketing professionals.
+            </p>
+            <p>I am highly organised and detail-oriented, with a strong emphasis on delivering high-quality,
+                bug-free code. I am also a team player and enjoy collaborating with other developers, designers and
+                project managers to bring projects to completion. As well as, understanding and empathising with
+                users to develop highly functional digital products.
+            </p>
+        </div>
+        <div class="mob-center">
+            <h2>Software Skills</h2>
+            <h3><i class="fas fa-code"></i> Web development</h3>
+            <p>HTML, CSS (Sass), JavaScript (Vue, jQuery), PHP, SQL</p>
+            <h3><i class="fas fa-palette"></i> Graphic Design</h3>
+            <p>Adobe CC: InDesign, Illustrator, Photoshop, XD</p>
+            <h3><i class="fas fa-project-diagram"></i></i> Data Analytics</h3>
+            <p>Python, R, SQL</p>
 
-				</div>
-			</div>
-		</div>
-	</div>
+        </div>
+    </section>
+</div>
 
-	<!-- Footer -->
-	<footer>
-		<div class="container">
-			<div class="footer">
-				<div class="footer-col">
-					<h3>Get in touch!</h3>
-					<a href="mailto:thorst@gmail.com" class="button2">thorst@gmail.com</a>
-				</div>
-				<div class="footer-col">
-					<h3>Social media</h3>
-					<a href="https://www.linkedin.com/in/thorstenbell/" target="_blank" rel="noreferrer" class="button2">LinkedIn</a>
-				</div>
-			</div>
-		</div>
-		<p id="copyright">&copy; Thorsten Bell <script>document.write(new Date().getFullYear())</script></p>
-	</footer>
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="footer">
+            <div>
+                <h3>Get in touch!</h3>
+                <a href="mailto:thorst@gmail.com" class="button2">thorst@gmail.com</a>
+            </div>
+            <div>
+                <h3>Social media</h3>
+                <a href="https://www.linkedin.com/in/thorstenbell/" target="_blank" rel="noreferrer" class="button2">LinkedIn</a>
+            </div>
+        </div>
+    </div>
+    <p id="copyright">&copy; Thorsten Bell
+        <script>document.write(new Date().getFullYear())</script>
+    </p>
+</footer>
 
 </body>
 </html>
