--- a/walas.html
+++ b/walas.html
@@ -2,123 +2,101 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
 
-	<title>Thorsten Bell - World of Walas</title>
-	<meta name="author" content="Thorsten Bell">
-	<meta name="description" content="Thorsten Bell is a graphic designer for World of Walas, here are some examples of work created for Walas.">
+    <title>Thorsten Bell - World of Walas</title>
+    <meta name="author" content="Thorsten Bell">
+    <meta name="description"
+          content="Thorsten Bell was a graphic designer for World of Walas, here are some examples of work created for Walas.">
 
-	<link rel="shortcut icon" type="image/png" href="favicon.png">
-	<link rel="shortcut icon" sizes="192x192" href="favicon.png">
-	<link rel="apple-touch-icon" href="favicon.png">
-	<link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" sizes="192x192" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="stylesheet" href="style.css?20230102">
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-	<script src="https://kit.fontawesome.com/01e3cbe6fb.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/01e3cbe6fb.js" crossorigin="anonymous"></script>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
-	<!-- Nav bar -->
-	<div class="navbar">
-		<div class="container">
-			<div class="nav">
-				<a href="index.html" class="logo"><img src="logo.svg" alt="home"></a>
-				<a href="mailto:thorst@gmail.com" class="button1">thorst@gmail.com</a>
-			</div>
-		</div>
-	</div>
+<!-- Nav bar -->
+<div class="navbar">
+    <div class="container">
+        <div class="nav">
+            <a href="index.html" class="logo"><img src="logo.svg" alt="home"></a>
+            <a href="mailto:thorst@gmail.com" class="button1">thorst@gmail.com</a>
+        </div>
+    </div>
+</div>
 
-	<!-- Banner -->
-	<div class="banner" style="background-image: url('images/homeBanner.jpg')">
-		<div class="page-title">
-			<h1>World of Walas</h1>
-			<a href="index.html" class="button2">Back to home</a>
-		</div>
-	</div>
+<!-- Banner -->
+<div class="banner" style="background-image: url('images/homeBanner.jpg')">
+    <div class="page-title">
+        <h1>World of Walas</h1>
+        <a href="index.html" class="button2">Back to home</a>
+    </div>
+</div>
 
-	<!-- Main Content -->
-	<div class="container">
+<!-- Main Content -->
+<div class="container">
+    <section class="grid">
+        <div>
+        <h2 class="mob-center">World of Walas</h2>
+        <p>I worked at World of Walas as a 'Graphic Designer & Frontend Developer'. In my role at Walas I worked
+            on:</p>
+        <ul>
+            <li>Creating brand guidelines and designing a set of brand books</li>
+            <li>Concept, project, and investor books</li>
+            <li>Business cards, letterheads, report templates, presentation templates</li>
+            <li>UI design and web development for Walas and project brands</li>
+            <li>Location branding: banners, narrowcasting, signage</li>
+            <li>Brochure design for Walas and project brands</li>
+            <li>Posters and booth design for trade fairs</li>
+        </ul>
+    </div>
+    <img src="images/walas/walas6.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas1.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas2.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas3.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas8.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas9.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas4.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas5.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas7.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas10.jpg" class="proj-img" alt="">
+    <img src="images/walas/walas11.jpg" class="proj-img" alt="">
 
-		<div class="row">
-			<div class="about">
-				<div class="box1">
-					<h2 class="mob-center">World of Walas</h2>
-					<p>I have worked at the World of Walas as a 'Graphic Designer'since October 2018. In my role at Walas I have worked on:</p>
-					<ul>
-						<li>Creating brand guidelines and designing a set of brand books</li>
-						<li>Concept, project, and investor books</li>
-						<li>Business cards, letterheads, report templates, presentation templates</li>
-						<li>UI design and web development for Walas and project brands</li>
-						<li>Location branding: banners, narrowcasting, signage</li>
-						<li>Brochure design for Walas and project brands</li>
-						<li>Posters and booth design for trade fairs</li>
-					</ul>
+</section>
 
-				</div>
-				<div class="box1">
-					<img src="images/walas/walas6.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/walas/walas1.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/walas/walas2.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/walas/walas3.jpg" class="proj-img">
-				</div>
-				<div class="box1">
-					<img src="images/walas/walas8.jpg" class="proj-img">
-				</div>
-				<div class="box1">
-					<img src="images/walas/walas9.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/walas/walas4.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/walas/walas5.jpg" class="proj-img">
-				</div>
-				<div class="box2">
-					<img src="images/walas/walas7.jpg" class="proj-img">
-				</div>
-				<div class="box1">
-					<img src="images/walas/walas10.jpg" class="proj-img">
-				</div>
-				<div class="box1">
-					<img src="images/walas/walas11.jpg" class="proj-img">
-				</div>
+<div class="buttons">
+    <a href="index.html" class="button1">Back to home</a>
+</div>
 
-			</div>
-		</div>
+</div>
 
-		<div class="buttons">
-			<a href="index.html" class="button1">Back to home</a>
-		</div>
-
-	</div>
-
-	<!-- Footer -->
-	<footer>
-		<div class="container">
-			<div class="footer">
-				<div class="footer-col">
-					<h3>Get in touch!</h3>
-					<a href="mailto:thorst@gmail.com" class="button2">thorst@gmail.com</a>
-				</div>
-				<div class="footer-col">
-					<h3>Social media</h3>
-					<a href="https://www.linkedin.com/in/thorstenbell/" target="_blank" rel="noreferrer" class="button2">LinkedIn</a>
-				</div>
-			</div>
-		</div>
-		<p id="copyright">&copy; Thorsten Bell <script>document.write(new Date().getFullYear())</script></p>
-	</footer>
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="footer">
+            <div>
+                <h3>Get in touch!</h3>
+                <a href="mailto:thorst@gmail.com" class="button2">thorst@gmail.com</a>
+            </div>
+            <div>
+                <h3>Social media</h3>
+                <a href="https://www.linkedin.com/in/thorstenbell/" target="_blank" rel="noreferrer" class="button2">LinkedIn</a>
+            </div>
+        </div>
+    </div>
+    <p id="copyright">&copy; Thorsten Bell
+        <script>document.write(new Date().getFullYear())</script>
+    </p>
+</footer>
 
 </body>
 </html>
