--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <meta name="author" content="Thorsten Bell">
     <meta name="description"
           content="W3BL is Thorsten Bell's Portfolio. Thorsten Bell is a developer based in the Netherlands and UK">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
